# bug-free-potato

./: .dockerignore  .gitignore  .prettierrc  Cargo.toml  Dockerfile  README.md  app.ts  docker-compose.yml  index.js  package-lock.json  package.json  server.js  tsconfig.json
.husky/: pre-commit
client/: Dockerfile  package-lock.json  package.json  tailwind.config.js
client/public/: index.html
client/src/: App.test.tsx  App.tsx  index.css  index.tsx
client/src/__snapshots__/: App.test.tsx.snap
client/src/app/: store.ts
client/src/components/header/: Header.component.tsx  Header.test.tsx  header.component.tsx
client/src/components/header-button/: Header-button.component.tsx
client/src/components/msg-client-input/: Msg-client-input.component.tsx  msg-client-input.component.tsx
client/src/components/msg-client-item/: Msg-client-item.component.tsx  msg-client-item.component.tsx
client/src/components/msg-client-tab/: Msg-client-tab.component.tsx  (+1 more)
client/src/features/: store.ts
cypress/integration/: app.spec.js
cypress/plugins/: index.js
prisma/: schema.prisma
prisma/migrations/20211208224004_init/: migration.sql
src/: App.tsx  app.ts  index.ts  index.tsx  main.rs  server.rs  server.ts  userRouter.ts
src/components/footer/: footer.component.tsx
src/components/header/: header.component.tsx
src/components/msg-client-input/: msg-client-input.component.tsx
src/pages/home/: home.page.tsx  home.tsx
src/pages/login/: login.page.tsx  login.tsx
src/routes/: userRouter.ts
src/utils/: fixed-size-array.ts
static/: index.html  websocket.html
(+24 files in other folders)
