[package]
name = "my-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.3"

rand = "0.7"
bytes = "0.5"
byteorder = "1.3"
futures = "0.3"
env_logger = "0.8"
serde = "1"
serde_json = "1"
